...
          ),
          //!!!!!!!!!!!!
          Transform.translate(
              // offset: Offset(41.0, 344.0),
              offset: Offset(MediaQuery.of(context).size.width * 0.095,
                  MediaQuery.of(context).size.height * 0.37),
              child: cons(1, "Social")),
          Transform.translate(
              // offset: Offset(232.0, 344.0),
              offset: Offset(MediaQuery.of(context).size.width * 0.54,
                  MediaQuery.of(context).size.height * 0.37),
              child: cons(2, "Academic")),
          Transform.translate(
              // offset: Offset(41.0, 417.0),
              offset: Offset(MediaQuery.of(context).size.width * 0.095,
                  MediaQuery.of(context).size.height * 0.45),
              child: cons(3, "Hobbies")),
          Transform.translate(
              // offset: Offset(41.0, 492.0),
              offset: Offset(MediaQuery.of(context).size.width * 0.095,
                  MediaQuery.of(context).size.height * 0.53),
              child: cons(4, "Family")),
          Transform.translate(
              // offset: Offset(232.0, 417.0),
              offset: Offset(MediaQuery.of(context).size.width * 0.54,
                  MediaQuery.of(context).size.height * 0.45),
              child: cons(5, "Work")),
          Transform.translate(
              // offset: Offset(232.0, 492.0),
              offset: Offset(MediaQuery.of(context).size.width * 0.54,
                  MediaQuery.of(context).size.height * 0.53),
              child: cons(6, "Relationships")),
          Transform.translate(
              // offset: Offset(136.5, 565.0),
              offset: Offset(MediaQuery.of(context).size.width * 0.317,
                  MediaQuery.of(context).size.height * 0.61),
              child: cons(7, "Mood and Health")),

          
          Transform.translate(
            // offset: Offset(120.2, 644.0),
            offset: Offset(MediaQuery.of(context).size.width * 0.28,
                MediaQuery.of(context).size.height * 0.7),
...
                },
                shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.all(Radius.circular(25))),
                    color: Color(0xffffffff),
                child: Center(
                  child: Text(
                    "Next",
                    style: TextStyle(
                      fontFamily: 'ZiZhiQuXiMaiTi',
                      fontSize: MediaQuery.of(context).size.height * 0.027,
                      color: Colors.black,
                    ),
                    textAlign: TextAlign.center,
...
