...

          Transform.translate(
            offset: Offset(MediaQuery.of(context).size.width * 0.1612,
                MediaQuery.of(context).size.height * 0.57175),
            child: Container(
              child: TextField(
                key: Key("loginIDTextField"),
                decoration: InputDecoration(
                  border: OutlineInputBorder(),
                  labelText: "Account ID",
                ),
                onChanged: (value) {
                  this.id = value;
...

          Transform.translate(
            offset: Offset(MediaQuery.of(context).size.width * 0.1612,
                MediaQuery.of(context).size.height * 0.71526),
            child: Container(
              child: TextField(
                key: Key("LoginPasswordTextField"),
                obscureText: true,
                decoration: InputDecoration(
                  border: OutlineInputBorder(),
                  labelText: "Password",
                ),
                onChanged: (value) {
...
              offset: Offset(MediaQuery.of(context).size.width * 0.3037,
                  MediaQuery.of(context).size.height * 0.80866),
              child: SizedBox(
                width: 160,
                height: 40,
                child: RaisedButton(
                  child: Text("Login"),
                  color: const Color(0xfffaaf7b),
                  onPressed: login,
                ),
              )),

          //Reset password button
...
              offset: Offset(MediaQuery.of(context).size.width * 0.3037,
                  MediaQuery.of(context).size.height * 0.92255),
              child: SizedBox(
                width: 160,
                height: 40,
                child: RaisedButton(
                  key: Key("SignUpButton"),
                  child: Text("Sign Up"),
                  color: const Color(0xfffaaf7b),
                  onPressed: () {
                    Navigator.of(context).pushReplacementNamed('/signup');
                  },
                ),
...
