...
  }

  // Set _child to display the blank word.
  void displayBlank() {
    _child = TextField(
      textAlign: TextAlign.center,
      key: Key("item1TextField"),
      decoration: InputDecoration(
          labelText: _blank,
          labelStyle: TextStyle(
            fontSize: MediaQuery.of(context).size.height * 0.042,
          ),
          isDense: true,
...
          height: MediaQuery.of(context).size.height * 0.054,
          hoverColor: Color(0xfffaaf7b),
          shape: RoundedRectangleBorder(
              borderRadius: BorderRadius.all(Radius.circular(20))),
          color: Colors.grey[300],
          child: Text(
            'Yes',
            style: TextStyle(
              fontFamily: 'ZiZhiQuXiMaiTi',
              fontSize: MediaQuery.of(context).size.height * 0.023,
              color: const Color(0xff000000),
            ),
            textAlign: TextAlign.center,
...
          height: MediaQuery.of(context).size.height * 0.054,
          hoverColor: Color(0xfffaaf7b),
          shape: RoundedRectangleBorder(
              borderRadius: BorderRadius.all(Radius.circular(20))),
          color: Colors.grey[300],
          child: Text(
            'No',
            style: TextStyle(
              fontFamily: 'ZiZhiQuXiMaiTi',
              fontSize: MediaQuery.of(context).size.height * 0.023,
              color: const Color(0xff000000),
            ),
            textAlign: TextAlign.center,
...
