...
              offset: Offset(MediaQuery.of(context).size.width * 0.73,
                  MediaQuery.of(context).size.height * 0.26),
              child: Stack(children: <Widget>[
                ImageRadio(
                  images[4],
                  pressedImage[4],
                  key: Key("firstImageRadio"),
                  controller: aController,
                  onChange: (v) => addToArrayA(1),
                  width: MediaQuery.of(context).size.width * 0.14,
                  height: MediaQuery.of(context).size.height * 0.064,
                ),
                Container(
...
              offset: Offset(MediaQuery.of(context).size.width * 0.735,
                  MediaQuery.of(context).size.height * 0.459),
              child: Stack(children: <Widget>[
                ImageRadio(
                  images[4],
                  pressedImage[4],
                  key: Key("secondImageRadio"),
                  controller: sController,
                  onChange: (value) => addToArrayS(1),
                  width: MediaQuery.of(context).size.width * 0.14,
                  height: MediaQuery.of(context).size.height * 0.064,
                ),
                Container(
...
              offset: Offset(MediaQuery.of(context).size.width * 0.128,
                  MediaQuery.of(context).size.height * 0.659),
              child: Stack(children: <Widget>[
                ImageRadio(
                  images[0],
                  pressedImage[0],
                  key: Key("thirdImageRadio"),
                  controller: hController,
                  onChange: (value) => addToArrayH(5),
                  width: MediaQuery.of(context).size.width * 0.14,
                  height: MediaQuery.of(context).size.height * 0.064,
                ),
                Container(
...
